# cpp-tensorlib

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
bench/: bench_attn_decode.cpp  bench_cpu_gemm.cpp  bench_cpu_sweep.cpp  bench_llm.cpp  bench_main.cpp  bench_mlp_train.cpp  bench_q4_gemv.cpp  bench_qwen_decode.cpp  bench_qwen_gemv.cpp  chat_qwen.cpp  check_attn64.cpp  check_cpu_ukernel.cpp  check_cuda.cpp  check_gguf.cpp  check_llm_block.cpp  check_llm_decode.cpp  check_qwen.cpp  check_tokenizer.cpp  qwen_model.h  qwen_oracle_data.h  tokenizer_oracle_data.h
bench/cpu/check/: check_cpu_ukernel.cpp
bench/cpu/speed/: bench_cpu_gemm.cpp  bench_cpu_sweep.cpp
bench/cuda/: chat_qwen.cpp  qwen_model.h
bench/cuda/check/: check_cuda.cpp  check_qwen.cpp
bench/cuda/speed/: bench_bf16_gemv.cpp  bench_cuda_gemm.cpp  bench_qwen_decode.cpp
bench/host/: check_tokenizer.cpp
bench/shared/check/: check_mnist.cpp
cmake/: bin2c.cmake
docs/: architecture.md  performance-notes.md  roadmap.md  x86-validation-runbook.md
include/: array.h  cpu.h  cpu_threadpool.h  cuda.h  gguf.h  gpu.h  metal.h  metal_kernels.metal  objc.h  storage.h  tensorlib.h  tokenizer.h  tokenizer_data.h  types.h  webgpu.h
kernels/: gen_wgsl_inc.sh  smoke.cu  tensorlib_cuda.cu  tensorlib_webgpu.wgsl  tensorlib_webgpu_wgsl.inc
misc/: census.cpp
spike/webgpu/: .gitignore  README.md  build.sh  index.html  sgemm.wgsl  spike_main.cpp  worker.js
test/: test_array.cpp  test_basic.cpp
test/wasm/: build.sh  census-worker.js  census.html  census_wasm.cpp  deno_run.js  index.html  main_wasm.cpp  worker.js
